--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
         script: |
-          cd /home/dnb/project
+          cd /home/dnb/TestCICDrepo
           git pull
